# Check_EGE

./: Cargo.toml  README.md  config.json
src/: main.rs
