[package]
name = "check_ege"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lettre = { version = "0.11", default-features = false, features = [
"builder",
"smtp-transport",
"tokio1-rustls-tls"
] }

